--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,7 +4,7 @@ html {
 
 body {
   background-color: #fff7ec;
-  height: auto;
+  height: calc(100vh - 164px);
   font-family: "Lato", Arial, Helvetica;
   position: relative;
   color: #1f1f1f;
@@ -229,6 +229,24 @@ body {
 .btn-outline {
   color: #1f1f1f;
 }
+
+.dropdown-menu li {
+  position: relative;
+}
+.dropdown-menu .dropdown-submenu {
+  display: none;
+  position: absolute;
+  left: 100%;
+  top: -7px;
+}
+.dropdown-menu .dropdown-submenu-left {
+  right: 100%;
+  left: auto;
+}
+.dropdown-menu > li:hover > .dropdown-submenu {
+  display: block;
+}
+
 /* -------------------------------- page divider */
 
 .center-diamond {
