--- a/static/css/base.css
+++ b/static/css/base.css
@@ -61,7 +61,9 @@ body {
   width: 100%;
   max-width: 100%;
 }
-
+.product-card {
+  background-color: #fff7ec;
+}
 /* -------------------------------- Media Queries */
 
 /* Mobile Styles (up to 767px) */
