--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,4 +1,4 @@
-<header class="fixed-top header-container w-100">
+<header class="fixed-top header-container w-100 mobile-background">
     <nav class="navbar navbar-light">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center w-100">
