chore: updating buttons on nav

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -16,7 +16,7 @@
         </div>
         <div class="dropdown show col gold">
             <a class="text-reset text-decoration-none cursor-hover gold" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
+            Electric<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -28,7 +28,7 @@
         </div>
         <div class="dropdown show col gold">
             <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
+            Acoustic<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -68,7 +68,7 @@
         </div>
         <div class="dropdown show col gold">
             <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
+            Bass<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -79,7 +79,7 @@
         </div>
         <div class="dropdown show col gold">
             <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
+            Accessories<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -90,7 +90,7 @@
         </div>
         <div class="dropdown show col gold">
             <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
+            Blog<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -99,26 +99,15 @@
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
         </div>
-        <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+        <div class="show col gold">
+          <a class="text-reset text-decoration-none cursor-hover" href="" id="#" aria-haspopup="true" aria-expanded="false">
+          Contact Us
+          </a>
         </div>
-        <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none dropdown-toggle" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
-            </a>
-        
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+        <div class="show col gold">
+          <a class="text-reset text-decoration-none cursor-hover" href="" id="#" aria-haspopup="true" aria-expanded="false">
+          About Us
+          </a>
         </div>
     </div>
 </div>
