fix: all buttons completed and views updated

--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -37,22 +37,39 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="#" id="navbarDropdownMenuLink2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
+                            Electric<i class="fa-solid fa-chevron-down fa-fw"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdownMenuLink2">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Fender</a></li>
+                            <li><a class="dropdown-item" href="#">Gibson</a></li>
+                            <li><a class="dropdown-item" href="#">All</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="#" id="navbarDropdownMenuLink3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
+                            Acoustic<i class="fa-solid fa-chevron-down fa-fw"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdownMenuLink3">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Fender</a></li>
+                            <li><a class="dropdown-item" href="#">Gibson</a></li>
+                            <li><a class="dropdown-item" href="#">All</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Bass<i class="fa-solid fa-chevron-down fa-fw"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdownMenuLink3">
+                            <li><a class="dropdown-item" href="#">Fender</a></li>
+                            <li><a class="dropdown-item" href="#">Gibson</a></li>
+                            <li><a class="dropdown-item" href="#">All</a></li>
+                        </ul>
+                    </li>
+                    <li><a class="nav-link" href="#">Accessories</a></li>
+                    <li><a class="nav-link" href="#">Blog</a></li>
+                    <li><a class="nav-link" href="#">Contact Us</a></li>
+                    <li><a class="nav-link" href="#">About Us</a></li>
+                    
                 </ul>
                     <form action="{% url 'products' %}" method="GET" class="d-flex searchbar-mobile">
                         <input class="form-control mr-1" id="mobilesearchright" type="search" name="q" placeholder="Type to Search...">
