--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,6 +12,7 @@
 
 {% block content %}
   <div class="container h-100">
+    <!--<img src="/media/desktophero.png" alt="Pink Fender Telecaster with gear">-->
     <div class="row h-100">
       <div class="col-7 col-md-6 my-auto">
         <h1 class="display-4 logo-font text-black">
@@ -20,7 +21,7 @@
         <div class="my-5">
           <h4>
             <a
-              href="{% url 'products' %}"
+              href="{% url 'products'%}"
               class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3"
               >Shop Now</a
             >
