--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -20,11 +20,10 @@
             </a>
         
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <li><a class="dropdown-item" href="#">By Price</a></li>
-              <li><a class="dropdown-item" href="#">By Rating</a></li>
-              <li><a class="dropdown-item" href="#">By Category</a></li>
-              <li><a class="dropdown-item" href="{% url 'products' %}">All Products</a></li>
-              </ul>
+              <li><a class="dropdown-item" href="#">Fender</a></li>
+              <li><a class="dropdown-item" href="#">Gibson</a></li>
+              <li><a class="dropdown-item" href="#">All</a></li>
+          </ul>
         </div>
         <div class="dropdown show col gold">
             <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -32,8 +31,11 @@
             </a>
         
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Fender</a></li>
+              <li><a class="dropdown-item" href="#">Gibson</a></li>
+              <li><a class="dropdown-item" href="#">All</a></li>
+            </ul>
+                <!-- Example of submenus if needed!
                 <li>
                     <a class="dropdown-item" href="#">
                       Submenu &raquo;
@@ -63,8 +65,7 @@
                         <a class="dropdown-item" href="#">Submenu item 5</a>
                       </li>
                     </ul>
-                  </li>
-            </ul>
+                  </li> -->
         </div>
         <div class="dropdown show col gold">
             <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -72,32 +73,20 @@
             </a>
         
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">Fender</a></li>
+                <li><a class="dropdown-item" href="#">Gibson</a></li>
+                <li><a class="dropdown-item" href="#">All</a></li>
             </ul>
         </div>
-        <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Accessories<i class="fa-solid fa-chevron-down fa-fw"></i>
-            </a>
-        
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+        <div class="show col gold">
+          <a class="text-reset text-decoration-none cursor-hover" href="" id="#" aria-haspopup="true" aria-expanded="false">
+            Accessories
+          </a>
         </div>
-        <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Blog<i class="fa-solid fa-chevron-down fa-fw"></i>
-            </a>
-        
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+        <div class="show col gold">
+          <a class="text-reset text-decoration-none cursor-hover" href="" id="#" aria-haspopup="true" aria-expanded="false">
+          Blog
+          </a>
         </div>
         <div class="show col gold">
           <a class="text-reset text-decoration-none cursor-hover" href="" id="#" aria-haspopup="true" aria-expanded="false">
@@ -111,4 +100,3 @@
         </div>
     </div>
 </div>
-<hr>
