--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -20,9 +20,9 @@
             </a>
         
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Fender</a></li>
-              <li><a class="dropdown-item" href="#">Gibson</a></li>
-              <li><a class="dropdown-item" href="#">All</a></li>
+              <li><a class="dropdown-item" href="{% url 'products' %}?category=electric_guitars&brand=fender">Fender</a></li>
+              <li><a class="dropdown-item" href="{% url 'products' %}?category=electric_guitars&brand=gibson">Gibson</a></li>
+              <li><a class="dropdown-item" href="{% url 'products' %}?category=electric_guitars">All</a></li>
           </ul>
         </div>
         <div class="dropdown show col gold">
