feat: bass and acoustic options added to JSON

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -84,8 +84,8 @@
           </a>
       
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="{% url 'products' %}?category=accessories&description=amplifier">Amplifier</a></li>
-            <li><a class="dropdown-item" href="{% url 'products' %}?category=accessories">Gibson</a></li>
+            <li><a class="dropdown-item" href="{% url 'products' %}?category=accessories&description=amplifier">Amplifiers</a></li>
+            <li><a class="dropdown-item" href="{% url 'products' %}?category=accessories&description=pedal">Pedals</a></li>
             <li><a class="dropdown-item" href="{% url 'products' %}?category=accessories">All</a></li>
           </ul>
         </div>
