--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -24,20 +24,32 @@
                                     <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 </a>
                                 {% endif %}
+                    <div class="add-to-basket text-center"><i class="fa-regular fa-plus fa-fw mr-2"></i>ADD TO BASKET</div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ product.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                    <h1 class="mb-0">{{ product.name }}</h1>
+                    <p class="lead mb-0 text-left font-weight-bold gold-font">£{{ product.price }}</p>
                     {% if product.rating %}
                         <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
+                    <h2>Description</h2>
                     <p class="mt-3">{{ product.description }}</p>
                 </div>
             </div>
+        </div>
+        <h3>Details</h3>
+        <div class="row text-center">
+                
+                <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+                    <p>AAAAAAAAAAAAAAAAAAAAA</p>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <p>AAAAAAAAAAAAAAAAAAAAA</p>
+                </div>
         </div>
     </div>
 {% endblock %}
