--- a/static/css/base.css
+++ b/static/css/base.css
@@ -87,6 +87,11 @@ body {
   font-weight: 300;
 }
 
+.add-to-basket:hover {
+  color: #a67c00;
+  text-decoration: none;
+}
+
 .navbar {
   padding-left: 0;
   padding-right: 0;
