--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -12,9 +12,9 @@
 
 {% block content %}
     <div class="container-fluid">
-        <div class="row">
+        <div class="row height-align">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                <div class="image-container my-5">
+                <div class="image-container mb-2 mt-md-2">
                     {% if product.image %}
                         <a href="{{ product.image.url }}" target="_blank">
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
-                <div class="product-details-container mb-5 mt-md-5">
+                <div class="product-details-container mb-2 mt-md-2">
                     <h1 class="mb-0 mb-md-2">{{ product.name }}</h1>
                     <p class="lead mb-0 text-left font-weight-bold gold-font mb-md-2">£{{ product.price }}</p>
                     {% if product.rating %}
@@ -38,6 +38,46 @@
                     {% endif %}
                     <h2>Description</h2>
                     <p class="mt-3">{{ product.description }}</p>
+                </div>
+                <div class="bottom-container">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                        <p class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                <i class="fas fa-truck me-3"></i>Shipping
+                            </button>
+                        </p>
+                        <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Estimated 
+                            </div>
+                        </div>
+                        </div>
+                        <div class="accordion-item">
+                        <p class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                <i class="fas fa-rotate-left me-3"></i>Return Policy
+                            </button>
+                        </p>
+                        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by
+                            </div>
+                        </div>
+                        </div>
+                        <div class="accordion-item">
+                        <p class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <i class="fas fa-headset me-3"></i>Support
+                            </button>
+                        </p>
+                        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden 
+                            </div>
+                        </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
