--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -49,7 +49,7 @@
                         </p>
                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                Estimated 
+                                <strong>Free shipping on orders over £50</strong>
                             </div>
                         </div>
                         </div>
