--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -50,6 +50,7 @@
                         <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <strong>Free shipping on orders over £50</strong>
+                                <p>Order today? Estimated shipping date: {{ estimated_shipping_date }} </p>
                             </div>
                         </div>
                         </div>
