feat: you may also like now showing 4 products

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -120,6 +120,10 @@ body {
   --bs-accordion-active-bg: #fff7ec;
   --bs-accordion-bg: #fff7ec;
 }
+
+.header {
+  letter-spacing: 4px;
+}
 /* -------------------------------- Media Queries */
 
 /* Mobile Styles (up to 767px) */
