--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,6 +51,7 @@
                             <div class="accordion-body">
                                 <strong>Free shipping on orders over £50</strong>
                                 <p>Order today? Estimated shipping date: {{ estimated_shipping_date }} </p>
+                                <strong>Standard Delivery Cost: £4.99</strong> 
                             </div>
                         </div>
                         </div>
@@ -62,7 +63,7 @@
                         </p>
                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by
+                            <p>You can return any unused item within 30 days of purchase for a full refund or exchange, provided it is in its original packaging and condition. Custom or personalised items are non-returnable unless faulty.</p>
                             </div>
                         </div>
                         </div>
@@ -74,7 +75,7 @@
                         </p>
                         <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden 
+                            <p>If you experience any technical issues with your purchase, our support team is here to help. You can contact us via email or live chat, and we’ll do our best to resolve any problems as quickly as possible. For more complex issues, we also offer step-by-step guidance to ensure you get the most out of your product.</p>
                             </div>
                         </div>
                         </div>
@@ -123,5 +124,57 @@
                 <p>{{ product.neck_shape }}</p>
             </div>
             {% endif %}
+        <div class="row">
+            <div class="col">
+                <h5 class="text-center header mt-5">YOU MAY ALSO LIKE</h5>
+                <div><hr class="center-diamond"></div>
+            </div>
+            <div class="row"></div>
+            <div class="product-container col-10 offset-1">
+                <div class="row mt-1 mb-2"></div>
+                <div class="row">
+            {% for recommended_product in recommended_products %}
+            <!--Logic taken from products page-->
+                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                            <div class="card h-100 border-0 product-card">
+                                {% if recommended_product.image %}
+                                <a href="{% url 'product_detail' recommended_product.id %}">
+                                    <img class="card-img-top img-fluid" src="{{ recommended_product.image.url }}" alt="{{ recommended_product.name }}">
+                                </a>
+                                {% else %}
+                                <a href="{% url 'product_detail' recommended_product.id %}">
+                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ recommended_product.name }}">
+                                </a>
+                                {% endif %}
+                                <div class="card-body pb-0">
+                                    <p class="mb-0">{{ recommended_product.name }}</p>
+                                </div>
+                                <div class="card-footer pt-0 border-0 text-left">
+                                    <div class="row">
+                                        <div class="col">
+                                            <p class="lead mb-0 text-left font-weight-bold">£{{ recommended_product.price }}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>                   
+                        {% if forloop.counter|divisibleby:2 %}
+                            <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                                <hr class="center-diamond">
+                            </div>
+                        {% endif %}
+                        {% if forloop.counter|divisibleby:3 %}
+                            <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                                <hr class="center-diamond">
+                            </div>
+                        {% endif %}
+                        {% if forloop.counter|divisibleby:4 %}
+                            <div class="col-12 d-none d-xl-block mb-5">
+                                <hr class="center-diamond">
+                            </div>
+                        {% endif %}
+            {% endfor %}
+        </div>
+        </div>
     </div>
 {% endblock %}
