--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,25 +3,23 @@
 {% load static %} 
 
 {% block page_header %}
-  <div class="container header-container">
-    <div class="row">
-      <div class="col"></div>
+    <div class="container header-container">
+        <div class="row">
+        <div class="col"></div>
+        </div>
     </div>
-  </div>
 {% endblock %} 
 
 {% block content %}
-    <!--<div class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
-                <h2 class="logo-font">Products</h2>-->
-            <div class="col text-center mt-3">
                     {% if current_categories %}
-                        <p>Currently Viewing: {% if request.GET.brand %}{{ request.GET.brand|capfirst }}{% endif %}
+                        <h2 class="header">{% if request.GET.brand %}{{ request.GET.brand|capfirst }}{% endif %}
                             {% for category in current_categories %}
                                 {{ category.friendly_name }}{% if not forloop.last %}, {% endif %}
                             {% endfor %}
-                        </p>
+                        </h2>
                     {% endif %}
             </div>
         </div>
